modify html ref

--- a/src/main/resources/static/views/account.html
+++ b/src/main/resources/static/views/account.html
@@ -17,7 +17,7 @@
           </div>
           <form
             class="layui-form layui-card-body"
-            action="./modifypsw"
+            action="/user/changepsw"
             method="post"
           >
             <div class="layui-form-item">
