--- a/src/main/resources/static/views/account.html
+++ b/src/main/resources/static/views/account.html
@@ -75,7 +75,7 @@
           </div>
           <form
             class="layui-form layui-card-body"
-            action="./modifyphone"
+            action="/user/changephone"
             method="post"
           >
             <div class="layui-form-item">
